# Barter

./: .env.exapmle  .gitignore  Makefile  alembic.ini  main.py  pyproject.toml  shpora.md
apps/auth/: __init__.py  crud.py  handlers.py  managers.py  router.py  schemas.py  servicies.py  utils.py
apps/core/: settings.py
apps/core_dependency/: __init__.py  auth_dependency.py  db_dependency.py  dependencies.py  redis_dependency.py
apps/database/alembic/: env.py
apps/database/alembic/versions/: 2025_11_29_1353-df795fc1224d_create_user_table.py  2025_11_29_create_user_table.py  2025_12_02_rename_email_verified_column.py  2025_12_11_delete_column_is_email_verified.py  2026_01_07_update_user.py
apps/database/mixins/: id_mixins.py
apps/database/models/: __init__.py  base.py  user.py
apps/middleware/: auth.py
