[project]
name = "barter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.122.0",
    "passlib>=1.7.4",
    "propelauth-fastapi>=4.2.9",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "redis==6.4.0",
    "resend==2.19.0",
    "ruff>=0.14.7",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
